--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   font-family: "Sora", serif;
 }
 
-/* -------------------- common -------------------- */
+/* ---------------------------------------- common ---------------------------------------- */
 .container {
   width: 1170px;
   margin: 0 auto;
@@ -43,7 +43,23 @@ a {
   opacity: 0.9;
 }
 
-/* -------------------- header -------------------- */
+.section-heading {
+  color: #10375c;
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+
+.section-desc {
+  margin-top: 18px;
+  color: #575f66;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.67;
+}
+
+/* ---------------------------------------- header ---------------------------------------- */
 
 .header {
   background: var(--header-bg);
@@ -99,7 +115,7 @@ a {
   margin-right: 7px;
 }
 
-/* -------------------- hero -------------------- */
+/* ---------------------------------------- hero ---------------------------------------- */
 .hero {
   display: flex;
   padding-top: 76px;
@@ -171,4 +187,86 @@ a {
 .hero__img--small {
   width: 210px;
   height: 410px;
+}
+
+/* ---------------------------------------- service ---------------------------------------- */
+.services {
+  padding: 170px 0;
+  background-color: #fff;
+}
+
+.services__heading,
+.services__desc {
+  text-align: center;
+}
+
+.services__desc {
+  width: 468px;
+  margin: 0 auto;
+}
+
+.services__row {
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.services__img {
+  width: 570px;
+  height: 570px;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.service-item {
+  display: flex;
+  width: 470px;
+  border-radius: 10px;
+  background: #fff;
+  padding: 21px;
+}
+
+.service-item:hover {
+  box-shadow: 0 14px 28px 0 rgba(0, 0, 0, 0.05);
+  position: relative;
+  transition: 0.25s;
+}
+
+.service-item:hover .service-item__icon {
+  color: #fff;
+  background: #2e80ce;
+}
+
+.service-item__icon {
+  width: 60px;
+  height: 60px;
+  box-shadow: 0 14px 28px 0 rgba(0, 0, 0, 0.05);
+  border-radius: 30px;
+  color: #eff6df;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  margin-right: 19px;
+  transition: 0.25s;
+}
+
+.service-item__heading {
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.service-item__desc {
+  margin-top: 8px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+
+.service__btn {
+  margin-top: 55px;
 }
