--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,3 +326,51 @@ a {
   line-height: 1.75; /* 175% */
   display: inline-block;
 }
+
+/* ---------------------------------------- about ---------------------------------------- */
+.about {
+  margin-top: 85px;
+  padding: 85px 0 206px;
+  margin-top: 85px;
+}
+
+.about-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about__media {
+  width: 49%;
+}
+
+.about__content {
+  width: 40%;
+}
+
+.about__img {
+  position: relative;
+}
+
+.about__img--big {
+  display: flex;
+  width: 512px;
+  height: 370px;
+  border-radius: 6px;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.07);
+  object-fit: cover;
+}
+
+.about__img--small {
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+  position: absolute;
+  top: 121px;
+  left: 238px;
+}
+
+.about-content__btn {
+  margin-top: 38px;
+}
