--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -76,6 +76,45 @@
   .navbar__link:hover {
     background-color: #00ffff37;
   }
+
+  /* hero */
+  .hero {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .hero__content {
+    order: 2;
+  }
+  .hero__media {
+    order: 1;
+  }
+
+  .hero__content {
+    width: 80%;
+    text-align: center;
+    margin: 22px auto;
+  }
+  .hero__row {
+    justify-content: center;
+  }
+
+  /* khối services */
+  .services__row {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .services__img {
+    width: 100%;
+  }
+  .service-item {
+    width: 90%;
+    text-align: start;
+  }
+
+  .service__list {
+    text-align: center;
+  }
 }
 
 /* tablet */
@@ -87,8 +126,6 @@
 }
 
 /* tạm ẩn */
-.hero,
-.footer,
-main {
+.footer {
   display: none;
 }
