--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -141,6 +141,23 @@
     width: 90%;
     text-align: center;
   }
+
+  /* team list */
+  .team__list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
+  }
+  .team-item__thumb {
+    margin: 0 auto;
+  }
+  /* install img */
+  .install__img {
+    display: none;
+  }
+  .install__content {
+    min-width: 90%;
+    margin: 0 auto;
+  }
 }
 
 /* tablet */
