p6 responsive footer tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,9 +778,9 @@ button {
 }
 
 /* animation */
-.work .section-heading {
-  /* animation-iteration-count: infinite; */
-}
+/* .work .section-heading {
+  animation-iteration-count: infinite;
+} */
 
 /* aos */
 [data-aos] {
