--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -158,10 +158,36 @@
     min-width: 90%;
     margin: 0 auto;
   }
+
+  /* blog */
+  .blog__inner {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+  .blog__list {
+    order: 1;
+  }
+  .blog__content {
+    order: 2;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .blog__heading {
+    max-width: 90%;
+  }
 }
 
 /* tablet */
-@media (min-width: 768px) and (max-width: 991.98) {
+@media (min-width: 768px) and (max-width: 991.98px) {
+  /* footer */
+  .footer-hiden--tablet {
+    display: none;
+  }
+  .footer__top {
+    grid-template-columns: 0.5fr 0.5fr 1fr;
+  }
 }
 
 /* mobile */
@@ -169,6 +195,3 @@
 }
 
 /* tạm ẩn */
-.footer {
-  display: none;
-}
